Обновление API согласно новым изменениям
- Добавлено поле link_id в объект Link для получения идентификатора ссылки
- Добавлено поле expired_at в объект Link для получения времени истечения
- Обновлен CreateRedirectBuilder: добавлена поддержка expired_at и folder
- Обновлен SetLinksBuilder: добавлена поддержка expired_at и массива link_ids
- Обновлен пример использования для демонстрации новых возможностей

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ desktop.ini
 # PHPStan
 phpstan.neon
 phpstan-baseline.neon
+/.phpstan
 
 # Psalm
 psalm.xml
@@ -75,3 +76,4 @@ phpmd.xml
 node_modules/
 npm-debug.log
 yarn-error.log
+
